--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,9 @@ ikiwiki (1.51) UNRELEASED; urgency=low
     has changed so they are passed named parameters.
   * Plugin interface version increased to 2.00 since I don't anticipate any
     more interface changes before 2.0.
+  * Updated Gujarati translation from Kartik Mistry. Closes: #421198
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Apr 2007 22:18:47 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Apr 2007 01:30:34 -0400
 
 ikiwiki (1.50) unstable; urgency=low
 
