--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -23,3 +23,5 @@ Sorry, I know the title is ridiculously vague for a bug but I don't know what th
 	<html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+>> Huh, interesting.  Thanks for that I assumed it would be Perl foo.  I'll look into the web server config.  -- Adam.
