--- a/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
+++ b/doc/bugs/Fancy_characters_get_munged_on_page_save.mdwn
@@ -24,4 +24,4 @@ Sorry, I know the title is ridiculously vague for a bug but I don't know what th
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
->> Huh, interesting.  Thanks for that I assumed it would be Perl foo.  I'll look into the web server config.  -- Adam.
+Thanks for that I assumed it would be Perl foo.  I'll look into the web server config.  Though, just thinking some more ... it's weird that it does the correct thing on preview but not on display.  Hrm ... -- Adam.
