the kind of perl code that can only be written at 4:30 am
(Get a good message when a PageSpec fails due to a negated success by
creating success objects with a reason string, which morph into failure
objects when negated.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,10 +30,10 @@ ikiwiki (1.51) UNRELEASED; urgency=low
   * Plugin interface version increased to 2.00 since I don't anticipate any
     more interface changes before 2.0.
   * Updated Gujarati translation from Kartik Mistry. Closes: #421198
-  * Make pagespec_match on failure return a value that is false, but in a
-    scalar context, evaluates to a reason why the match failed.
+  * Make pagespec_match return an object that can be stringified to tell 
+    the reason why the match failed or succeeded.
   * Add testpagespec plugin, which might be useful to see why a pagespec isn't
-    matching something.
+    working as desired.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 27 Apr 2007 03:41:52 -0400
 
