--- a/doc/bugs/Filenames_with_colons_cause_problems_for_Windows_users.mdwn
+++ b/doc/bugs/Filenames_with_colons_cause_problems_for_Windows_users.mdwn
@@ -3,3 +3,6 @@
 As reported by a Windows user trying ikiwiki: because Windows doesn't support filenames with colons, he couldn't check out the ikiwiki svn repository.  More generally, ikiwiki doesn't encode colons in filenames for wiki pages, but to support Windows users perhaps it should.
 
 Windows does not support filenames containing any of these characters: `/ \ * : ? " < > |`
+
+> I take it this is a problem when checking out a wiki in windows, not when
+> browsing to urls that have colons in them from windows? --[[Joey]]
