--- a/doc/todo/syslog_should_show_wiki_name.mdwn
+++ b/doc/todo/syslog_should_show_wiki_name.mdwn
@@ -4,3 +4,5 @@ We run many ikiwikis on wiki.cs.pdx.edu, and we occasionally get messages like t
     Apr 26 07:43:26 svcs ikiwiki: bad page name 
 
 Those don't give us any information about which ikiwiki they came from.  ikiwiki needs to provide the wiki name in syslog messages. --[[JoshTriplett]]
+
+[[done]]
